welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:11: error: illegal start of simple expression
def move(nbrepas:Int,versLAvant:Boolean){
^